--- a/WebContent/resources/css/hhcib.css
+++ b/WebContent/resources/css/hhcib.css
@@ -5,14 +5,14 @@ body,html {
 	background: white;
 }
 
-#wrap {
+#container {
     width: 80%;
     margin: 0px auto;
     background: none repeat scroll 0% 0% rgb(153, 153, 204);
 }
 
-#top {
-	background: white;
+#header {
+	background: grey;
 }
 
 #left {
@@ -25,11 +25,6 @@ body,html {
  width:80%;
 }
 
-
-#footer {
-	clear:both;
-	background: #cc9;
-}
 
 h3 {
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
