--- a/src/main/webapp/resources/css/hhcib.css
+++ b/src/main/webapp/resources/css/hhcib.css
@@ -1,34 +1,70 @@
-body,html {
-	margin: 0;
-	padding: 0;
-	color: #000;
-	background: white;
-}
-
 #container {
-    width: 80%;
-    margin: 0px auto;
-    background: none repeat scroll 0% 0% rgb(153, 153, 204);
+	width: 80%;
+	margin: 0px auto;
+	background: none repeat scroll 0% 0% rgb(153, 153, 204);
 }
 
 #header {
-	background: grey;
+	background: black;
 }
 
 #left {
- float:left;
- width:20%
+	float: left;
+	width: 15%
 }
 
 #content {
- float:left;
- width:80%;
+	float: left;
+	width: 75%;
+	margin-left: 2%;
+	margin-top: 1%;
 }
-
 
 h3 {
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
-	padding-top: 10px;
-	padding-bottom: 3px;
+	padding-top: 2%;
+	padding-bottom: 2%;
+	padding-left: 15%;
+	color: white;
+}
+
+ul#navigation {
+	width: 12em;
+}
+
+ul#navigation li {
+	list-style: none;
+	background-color: black;
+	text-align: left;
+	margin: 0;
+}
+
+ul#navigation li a {
+	display: block;
+	text-decoration: none;
+	padding: .25em;
+	border-bottom1: 1px solid #3399FF;
+	border-right1: 1px solid #3399FF;
+}
+
+a:link,a:visited {
+	color: #FFFFFF;
+}
+
+a:hover,a:active {
+	color: #000000;
+}
+
+a:hover {
+	background-color: #fff;
+}
+
+ul#navigation li#youarehere a {
+	background-color: #09f;
+}
+
+p a:link,p a:visited {
+	color: #000;
+}
 }
