--- a/src/main/webapp/resources/css/hhcib.css
+++ b/src/main/webapp/resources/css/hhcib.css
@@ -32,7 +32,6 @@ h3 {
 ul#navigation {
 	width: 12em;
 }
-
 ul#navigation li {
 	list-style: none;
 	background-color: black;
@@ -48,23 +47,40 @@ ul#navigation li a {
 	border-right1: 1px solid #3399FF;
 }
 
-a:link,a:visited {
-	color: #FFFFFF;
+ul#navigation {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	display: block;
+	font: bold 16px Helvetica, Verdana, Arial, sans-serif;
+	line-height: 165%;
+	width: 200px;
 }
 
-a:hover,a:active {
-	color: #000000;
+ul#navigation li {
+	margin: 0;
+	padding: 0;
+	border-top: 10px solid #4D0000;
+	border-bottom: 10px solid #761A1A;
 }
 
-a:hover {
-	background-color: #fff;
+ul#navigation li a {
+	display: block;
+	text-decoration: none;
+	color: #fff;
+	background: #600;
+	padding: 0 0 0 20px;
+	width: 180px;
 }
 
-ul#navigation li#youarehere a {
-	background-color: #09f;
+ul#navigation li a:hover {
+	background: #900
+		url("http://www.cssportal.com/vertical-menus/images/vert-one_arrow.gif")
+		no-repeat 0 9px;
 }
 
-p a:link,p a:visited {
-	color: #000;
-}
+ul#navigation li a.current,ul.vert-one li a.current:hover {
+	background: #933
+	url("http://www.cssportal.com/vertical-menus/images/vert-one_arrow.gif")
+	no-repeat 0 9px;
 }
