Minor styling update due to print page functionality

--- a/src/main/webapp/resources/css/hhcib.css
+++ b/src/main/webapp/resources/css/hhcib.css
@@ -32,6 +32,12 @@
 	border: 1px solid #761A1A;
 }
 
+#subject-description-input {
+	width: 95%;
+    height: 400px;
+	float: left;
+}
+
 #rating {
 	padding: 10px;
 	float:right;
