--- a/src/main/webapp/resources/css/hhcib_menu.css
+++ b/src/main/webapp/resources/css/hhcib_menu.css
@@ -20,7 +20,6 @@
   line-height: 1.3;
 }
 #cssmenu {
-  width: 250px;
   background: #fff;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -68,18 +67,15 @@
 }
 #cssmenu > ul > li.active > a {
   background: rgb(91, 116, 168);
- // background: #97be10;
-  //background: -moz-linear-gradient(#97be10 0%, #79980d 100%);
-  //background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #97be10), color-stop(100%, #79980d));
-  //background: -webkit-linear-gradient(#97be10 0%, #79980d 100%);
-  //background: linear-gradient(#97be10 0%, #79980d 100%);
+  //background: #97be10;
+  background: -moz-linear-gradient(rgb(91, 116, 168) 0%, rgb(91, 116, 180) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgb(91, 116, 168)), color-stop(100%, rgb(91, 116, 180)));
+  background: -webkit-linear-gradient(rgb(91, 116, 168) 0%, rgb(91, 116, 180) 100%);
+  background: linear-gradient(rgb(91, 116, 168) 0%, rgb(91, 116, 180) 100%);
   color: #fff;
   text-shadow: 0 1px 1px #000;
-//  border: 1px solid #79980d;
 }
-#cssmenu > ul > li.active > a span {
-  //border: 1px solid #97be10;
-}
+
 #cssmenu > ul > li.has-sub > a span {
   background: url(/hhcib/images/icon_plus.png) 98% center no-repeat;
 }
@@ -101,5 +97,5 @@
   font-weight: bold;
 }
 #cssmenu ul ul a:hover {
-  color: #79980d;
+  color: rgb(91, 116, 168);
 }
