--- a/src/main/webapp/resources/css/hhcib.css
+++ b/src/main/webapp/resources/css/hhcib.css
@@ -26,56 +26,55 @@
 	margin-top: 1%;
 }
 
-#subject-description, #subject-slider {
+#subject-description,#subject-slider {
 	padding: 10px;
 	margin-top: 5%;
 	border: 1px solid #761A1A;
 }
 
 #subject-slider {
-    width: 70%;
-    margin-left:10%;
-    height: 250px;
+	width: 70%;
+	margin-left: 10%;
+	height: 250px;
 }
 
 #subject-description-input {
 	width: 95%;
-    height: 400px;
+	height: 400px;
 	float: left;
 }
 
 #rating {
 	padding: 10px;
-	float:right;
+	float: right;
 }
 
 #print-page {
-    float:right;
+	float: right;
 }
 
-.button{
-    margin-left: 1%;
-    text-decoration: none;
-	-webkit-box-shadow:rgba(0,0,0,0.0.1) 0 1px 0 0;
-	-moz-box-shadow:rgba(0,0,0,0.0.1) 0 1px 0 0;
-	box-shadow:rgba(0,0,0,0.0.1) 0 1px 0 0;
-	background-color:#5B74A8;
-	border:1px solid #29447E;
-	font-family:'Lucida Grande',Tahoma,Verdana,Arial,sans-serif;
-	font-size:14px;
-	font-weight:700;
-	padding:2px 6px;
-	color:#fff;
-	border-radius:5px;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px
+.button {
+	margin-left: 1%;
+	text-decoration: none;
+	-webkit-box-shadow: rgba(0, 0, 0, 0.0 .1) 0 1px 0 0;
+	-moz-box-shadow: rgba(0, 0, 0, 0.0 .1) 0 1px 0 0;
+	box-shadow: rgba(0, 0, 0, 0.0 .1) 0 1px 0 0;
+	background-color: #5B74A8;
+	border: 1px solid #29447E;
+	font-family: 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 700;
+	padding: 2px 6px;
+	color: #fff;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px
 }
 
 #social-share .button {
-    background-color : white;
-    border: none;
+	background-color: white;
+	border: none;
 }
-
 
 h3 {
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
