--- a/src/main/webapp/resources/css/hhcib.css
+++ b/src/main/webapp/resources/css/hhcib.css
@@ -83,10 +83,14 @@
 h3 {
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
+	color: white;
+}
+
+h3.splash {
 	padding-top: 2%;
 	padding-bottom: 2%;
 	padding-left: 15%;
-	color: white;
+	margin-left: 15%;
 }
 
 ul#navigation {
