--- a/src/main/webapp/resources/css/hhcib.css
+++ b/src/main/webapp/resources/css/hhcib.css
@@ -1,21 +1,30 @@
 html {
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	background: -moz-linear-gradient(#565656 0%, #323232 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #565656),
-		color-stop(100%, #323232));
-	background: -webkit-linear-gradient(#565656 0%, #323232 100%);
-	background: linear-gradient(#565656 0%, #323232 100%);
+	/* IE10 Consumer Preview */
+	background-image: -ms-linear-gradient(bottom, #FFFFFF 0%, rgb(91, 116, 168) 100%);
+	/* Mozilla Firefox */
+	background-image: -moz-linear-gradient(bottom, #FFFFFF 0%, rgb(91, 116, 168) 100%);
+	/* Opera */
+	background-image: -o-linear-gradient(bottom, #FFFFFF 0%, rgb(91, 116, 168) 100%);
+	/* Webkit (Safari/Chrome 10) */
+	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #FFFFFF),
+		color-stop(1, rgb(91, 116, 168)));
+	/* Webkit (Chrome 11+) */
+	background-image: -webkit-linear-gradient(bottom, #FFFFFF 0%, rgb(91, 116, 168) 100%);
+	/* W3C Markup, IE10 Release Preview */
+	background-image: linear-gradient(to top, #FFFFFF 0%, rgb(91, 116, 168) 100%);
+	background-repeat: no-repeat;
+}
+
+html, body {
+   height: 100%;
 }
 
 #container {
-	width: 80%;
+	width: 90%;
 	margin: 0px auto;
 	position: absolute;
 	background: white;
-	margin-left: 10%; //
+	margin-left: 5%;
 	height: auto;
 	min-height: 90%;
 }
@@ -27,13 +36,13 @@ html {
 
 #left {
 	float: left;
-	width: 20%;
+	width: 15%;
 	overflow: hidden;
 }
 
 #content {
 	float: left;
-	width: 75%;
+	width: 80%;
 	margin-left: 2%;
 	margin-top: 3%;
 	overflow: auto;
