--- a/src/main/webapp/resources/css/less/hhcib.less
+++ b/src/main/webapp/resources/css/less/hhcib.less
@@ -1,17 +1,19 @@
+@hhcib-blue: rgb(0, 116, 168);
+
 html {
 	/* IE10 Consumer Preview */
-	background-image: -ms-linear-gradient(bottom, #FFFFFF 0%, rgb(91, 116, 168) 100%);
+	background-image: -ms-linear-gradient(bottom, #FFFFFF 0%, @hhcib-blue 100%);
 	/* Mozilla Firefox */
-	background-image: -moz-linear-gradient(bottom, #FFFFFF 0%, rgb(91, 116, 168) 100%);
+	background-image: -moz-linear-gradient(bottom, #FFFFFF 0%, @hhcib-blue 100%);
 	/* Opera */
-	background-image: -o-linear-gradient(bottom, #FFFFFF 0%, rgb(91, 116, 168) 100%);
+	background-image: -o-linear-gradient(bottom, #FFFFFF 0%, @hhcib-blue 100%);
 	/* Webkit (Safari/Chrome 10) */
 	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #FFFFFF),
-		color-stop(1, rgb(91, 116, 168)));
+		color-stop(1, @hhcib-blue));
 	/* Webkit (Chrome 11+) */
-	background-image: -webkit-linear-gradient(bottom, #FFFFFF 0%, rgb(91, 116, 168) 100%);
+	background-image: -webkit-linear-gradient(bottom, #FFFFFF 0%, @hhcib-blue 100%);
 	/* W3C Markup, IE10 Release Preview */
-	background-image: linear-gradient(to top, #FFFFFF 0%, rgb(91, 116, 168) 100%);
+	background-image: linear-gradient(to top, #FFFFFF 0%, @hhcib-blue 100%);
 	background-repeat: no-repeat;
 }
 
@@ -87,9 +89,9 @@ html, body {
 .button {
 	margin-left: 1%;
 	text-decoration: none;
-	-webkit-box-shadow: rgba(0, 0, 0, 0.0 .1) 0 1px 0 0;
-	-moz-box-shadow: rgba(0, 0, 0, 0.0 .1) 0 1px 0 0;
-	box-shadow: rgba(0, 0, 0, 0.0 .1) 0 1px 0 0;
+	-webkit-box-shadow: rgba(0, 0, 0, 0, 0.1) 0 1px 0 0;
+	-moz-box-shadow: rgba(0, 0, 0, 0, 0.1) 0 1px 0 0;
+	box-shadow:  rgba(0, 0, 0, 0, 0.1) 0 1px 0 0;
 	background-color: #5B74A8;
 	border: 1px solid #29447E;
 	font-family: 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif;
