--- a/src/main/webapp/resources/css/hhcib.css
+++ b/src/main/webapp/resources/css/hhcib.css
@@ -53,12 +53,18 @@ html, body {
 
 #search-form\:search-input {
   margin-top: 2%;
+  margin-bottom: 2%;
   margin-left: 30%;
 }
 
 #search-form\:result {
   margin-top: 2%;
   width: 92%;
+}
+
+#search-form\:info {
+  margin-left: 25%;
+  font-style: italic;
 }
 
 .search-result-table {
