--- a/src/main/webapp/resources/css/sass/hhcib.scss
+++ b/src/main/webapp/resources/css/sass/hhcib.scss
@@ -1,3 +1,8 @@
+/*
+ * The hhcib.ccs stylesheet is generated - do not alter! Use instead hhcib.scss (located in sass-folder)
+ * to create the stylesheet which is based on SCSS-syntax  (see sass-lang.com) for futher details.
+ *
+ */	
 $hhcib-blue: rgb(0, 116, 168);
 $header-blue:  rgb(91, 116, 168);
 $light-grey: #F9F9F9;
