--- a/src/main/webapp/resources/css/sass/hhcib.scss
+++ b/src/main/webapp/resources/css/sass/hhcib.scss
@@ -1,6 +1,6 @@
 /*
  * The hhcib.ccs stylesheet is generated - do not alter! Use instead hhcib.scss (located in sass-folder)
- * to create the stylesheet which is based on SCSS-syntax  (see sass-lang.com) for futher details.
+ * to create the hhcib-stylesheet. hhcib.scss. is based on SCSS-syntax  (see sass-lang.com) for further details.
  *
  */	
 $hhcib-blue: rgb(0, 116, 168);
