Removed hhcib_menu and hhcib_print.css using .sass files instead

--- a/src/main/webapp/resources/css/sass/hhcib_menu.scss
+++ b/src/main/webapp/resources/css/sass/hhcib_menu.scss
@@ -1,6 +1,10 @@
+/*
+ * The hhcib_menu.ccs stylesheet is generated - do not alter! Use instead hhcib_menu.scss (located in sass-folder)
+ * to create the hhcib_menu-stylesheet. hhcib_menu.scss is based on SCSS-syntax  (see sass-lang.com) for further details.
+ *
+ */	
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,300);
 @charset 'UTF-8';
-/* Base Styles */
 #cssmenu,
 #cssmenu ul,
 #cssmenu li,
