--- a/src/main/webapp/resources/css/sass/hhcib_print.scss
+++ b/src/main/webapp/resources/css/sass/hhcib_print.scss
@@ -1,3 +1,8 @@
+/*
+ * The hhcib_print.ccs stylesheet is generated - do not alter! Use instead hhcib_print.scss (located in sass-folder)
+ * to create the hhcib_print-stylesheet. hhcib_print.scss is based on SCSS-syntax  (see sass-lang.com) for further details.
+ *
+ */	
 body {
 	color: #000000;
 	background: #ffffff;
