Added better borders around input types

--- a/src/main/webapp/resources/css/sass/hhcib.scss
+++ b/src/main/webapp/resources/css/sass/hhcib.scss
@@ -12,7 +12,7 @@ $border-red: #761A1A;
 $button-blue: #5B74A8;
 $button-shadow: rgba(0, 0, 0, 0.1);
 $button-border: #29447E;
-$input-border: #FFF;
+$input-border: #BBBBBB;
 $button-color: #FFF;
 $navigation-border-top: #4D0000;
 $navigation-border-bottom: #761A1A;
