Added heading when displaying subejcts

--- a/src/main/webapp/resources/css/sass/hhcib.scss
+++ b/src/main/webapp/resources/css/sass/hhcib.scss
@@ -73,6 +73,12 @@ html, body {
 	border: 1px solid $border-red;
 }
 
+#subject-heading {
+	margin-bottom: 1%;
+	font-weight: bold;
+	
+}
+
 #search-form\:search-input {
   margin-top: 5%;
   margin-bottom: 2%;
