Updated my_pages so subjectes created by logged in user is shown

--- a/src/main/webapp/resources/css/sass/hhcib.scss
+++ b/src/main/webapp/resources/css/sass/hhcib.scss
@@ -171,6 +171,11 @@ html, body {
 	-webkit-border-radius: 5px
 }
 
+#logout-button {
+	float: right;
+}
+
+
 input.rounded {
 	border: 1px solid $input-border;
 	-moz-border-radius: 10px;
